RESOLVED FIXED267249
[JSC] exception from handleHostCall for tail-call should be handled correctly
https://bugs.webkit.org/show_bug.cgi?id=267249
Summary [JSC] exception from handleHostCall for tail-call should be handled correctly
Yusuke Suzuki
Reported 2024-01-08 16:40:28 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-08 16:40:42 PST
Yusuke Suzuki
Comment 2 2024-01-08 16:48:00 PST
EWS
Comment 3 2024-01-09 07:29:02 PST
Committed 272816@main (e94a54e5f285): <https://commits.webkit.org/272816@main> Reviewed commits have been landed. Closing PR #22528 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.