Source/JavaScriptCore/bytecode/RepatchInlines.h
@@ -60,6 +60,7 @@ inline UGPRPair handleHostCall(JSGlobalObject* globalObject, CallFrame* calleeFr
                 reinterpret_cast<void*>(callLinkInfo->callMode() == CallMode::Tail ? ReuseTheFrame : KeepTheFrame));
         }
 
+        calleeFrame->setCallee(globalObject->partiallyInitializedFrameCallee());
         ASSERT(callData.type == CallData::Type::None);
         throwException(globalObject, scope, createNotAFunctionError(globalObject, callee));
         return encodeResult(
@@ -86,6 +87,7 @@ inline UGPRPair handleHostCall(JSGlobalObject* globalObject, CallFrame* calleeFr
         return encodeResult(LLInt::getHostCallReturnValueEntrypoint().code().taggedPtr(), reinterpret_cast<void*>(KeepTheFrame));
     }
 
+    calleeFrame->setCallee(globalObject->partiallyInitializedFrameCallee());
     ASSERT(constructData.type == CallData::Type::None);
     throwException(globalObject, scope, createNotAConstructorError(globalObject, callee));
     return encodeResult(
